[gd_scene load_steps=18 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://assets/Aero.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/background.jpg" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 511.747, 18.6757 )

[sub_resource type="DynamicFont" id=2]
size = 37
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 21
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 21
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=13]
size = 29
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=14]
size = 29
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 29
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 29
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 19
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
size = 21
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=10]
size = 34
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=11]
size = 31
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=12]
size = 30
font_data = ExtResource( 2 )

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -13.0
margin_top = -16.0
margin_right = 1058.0
margin_bottom = 642.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeathArea" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="DeathArea"]
position = Vector2( 513.074, 643.044 )
shape = SubResource( 1 )

[node name="SpawnContainer" type="Node" parent="."]

[node name="spawn1" type="Position2D" parent="SpawnContainer"]
position = Vector2( 367.701, -0.659271 )

[node name="spawn2" type="Position2D" parent="SpawnContainer"]
position = Vector2( 521.885, 0.90834 )

[node name="spawn3" type="Position2D" parent="SpawnContainer"]
position = Vector2( 657.371, -0.589005 )

[node name="spawn4" type="Position2D" parent="SpawnContainer"]
position = Vector2( 772.209, 0.0920715 )

[node name="spawn5" type="Position2D" parent="SpawnContainer"]
position = Vector2( 888.16, 0.41098 )

[node name="EnemyContainer" type="Node" parent="."]

[node name="gameOverScreen" type="CanvasLayer" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="gameOverScreen"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -7.0
margin_top = -5.0
margin_right = 8.0
margin_bottom = 11.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="gameOverScreen/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1032.0
margin_bottom = 609.0
mouse_filter = 0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="gameOverScreen/PanelContainer"]
margin_left = 7.0
margin_top = 278.0
margin_right = 1032.0
margin_bottom = 338.0
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="gameOverScreen/PanelContainer/VBoxContainer"]
margin_right = 1025.0
margin_bottom = 32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinLoseStatus" type="Label" parent="gameOverScreen/PanelContainer/VBoxContainer/CenterContainer"]
margin_left = 419.0
margin_right = 606.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 2 )
text = "You lose..."

[node name="CenterContainer2" type="CenterContainer" parent="gameOverScreen/PanelContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 1025.0
margin_bottom = 60.0

[node name="HBoxContainer" type="HBoxContainer" parent="gameOverScreen/PanelContainer/VBoxContainer/CenterContainer2"]
margin_left = 424.0
margin_right = 601.0
margin_bottom = 24.0

[node name="MainMenu" type="Button" parent="gameOverScreen/PanelContainer/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_right = 68.0
margin_bottom = 24.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 3 )
text = "Menu"

[node name="Rematch" type="Button" parent="gameOverScreen/PanelContainer/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_left = 72.0
margin_right = 177.0
margin_bottom = 24.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 4 )
text = "Rematch"

[node name="MatchInformation" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="MatchInformation"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 17.0
margin_top = 29.0
margin_right = -717.0
margin_bottom = -25.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MatchInformation/VBoxContainer"]
margin_right = 290.0
margin_bottom = 25.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GamemodeLabel" type="Label" parent="MatchInformation/VBoxContainer/HBoxContainer"]
margin_right = 180.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 13 )
text = "Gamemode: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gamemode" type="Label" parent="MatchInformation/VBoxContainer/HBoxContainer"]
margin_left = 184.0
margin_right = 184.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerRow" type="HBoxContainer" parent="MatchInformation/VBoxContainer"]
margin_top = 29.0
margin_right = 290.0
margin_bottom = 54.0

[node name="TimeLeft" type="Label" parent="MatchInformation/VBoxContainer/TimerRow"]
margin_right = 81.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 5 )
text = "Time:"

[node name="TimeValue" type="Label" parent="MatchInformation/VBoxContainer/TimerRow"]
margin_left = 85.0
margin_right = 145.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 5 )
text = "500"

[node name="DifficultyRow" type="HBoxContainer" parent="MatchInformation/VBoxContainer"]
margin_top = 58.0
margin_right = 290.0
margin_bottom = 83.0

[node name="DifficultyLabel" type="Label" parent="MatchInformation/VBoxContainer/DifficultyRow"]
margin_right = 157.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 6 )
text = "Difficulty: "

[node name="DiffucultyValue" type="Label" parent="MatchInformation/VBoxContainer/DifficultyRow"]
margin_left = 161.0
margin_right = 181.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 6 )
text = "0"

[node name="ScoreRow" type="HBoxContainer" parent="MatchInformation/VBoxContainer"]
margin_top = 87.0
margin_right = 290.0
margin_bottom = 112.0

[node name="ScoreLabel" type="Label" parent="MatchInformation/VBoxContainer/ScoreRow"]
margin_right = 92.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 6 )
text = "Score:"

[node name="PlayerScoreRow" type="HBoxContainer" parent="MatchInformation/VBoxContainer"]
margin_top = 116.0
margin_right = 290.0
margin_bottom = 141.0

[node name="PlayerNameLabel" type="Label" parent="MatchInformation/VBoxContainer/PlayerScoreRow"]
margin_right = 69.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 6 )
text = "You: "

[node name="PlayerScoreValue" type="Label" parent="MatchInformation/VBoxContainer/PlayerScoreRow"]
margin_left = 73.0
margin_right = 93.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 6 )
text = "0"

[node name="EnemyScoreRow" type="HBoxContainer" parent="MatchInformation/VBoxContainer"]
margin_top = 145.0
margin_right = 290.0
margin_bottom = 170.0

[node name="EnemyNameLabel" type="Label" parent="MatchInformation/VBoxContainer/EnemyScoreRow"]
margin_right = 112.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 6 )
text = "Enemy: "

[node name="EnemyScoreValue" type="Label" parent="MatchInformation/VBoxContainer/EnemyScoreRow"]
margin_left = 116.0
margin_right = 136.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 6 )
text = "0"

[node name="LifeRow" type="HBoxContainer" parent="MatchInformation/VBoxContainer"]
margin_top = 174.0
margin_right = 290.0
margin_bottom = 174.0

[node name="LifeContainer" type="Node" parent="MatchInformation/VBoxContainer/LifeRow"]

[node name="lifePos" type="Node" parent="MatchInformation/VBoxContainer/LifeRow"]

[node name="Position2D" type="Position2D" parent="MatchInformation/VBoxContainer/LifeRow/lifePos"]
position = Vector2( 30, 217 )

[node name="Position2D2" type="Position2D" parent="MatchInformation/VBoxContainer/LifeRow/lifePos"]
position = Vector2( 60, 217 )

[node name="Position2D3" type="Position2D" parent="MatchInformation/VBoxContainer/LifeRow/lifePos"]
position = Vector2( 90, 217 )

[node name="Position2D4" type="Position2D" parent="MatchInformation/VBoxContainer/LifeRow/lifePos"]
position = Vector2( 120, 217 )

[node name="Position2D5" type="Position2D" parent="MatchInformation/VBoxContainer/LifeRow/lifePos"]
position = Vector2( 150, 217 )

[node name="filler" type="HBoxContainer" parent="MatchInformation/VBoxContainer"]
margin_top = 178.0
margin_right = 290.0
margin_bottom = 309.0
size_flags_vertical = 3

[node name="TextChatBox" type="HBoxContainer" parent="MatchInformation/VBoxContainer"]
margin_top = 313.0
margin_right = 290.0
margin_bottom = 463.0
size_flags_vertical = 3

[node name="TextChat" type="RichTextLabel" parent="MatchInformation/VBoxContainer/TextChatBox"]
margin_right = 290.0
margin_bottom = 150.0
rect_min_size = Vector2( 290, 150 )
custom_fonts/normal_font = SubResource( 7 )
fit_content_height = true
scroll_active = false
scroll_following = true

[node name="ChatRow" type="HBoxContainer" parent="MatchInformation/VBoxContainer"]
margin_top = 467.0
margin_right = 290.0
margin_bottom = 507.0

[node name="ChatBox" type="TextEdit" parent="MatchInformation/VBoxContainer/ChatRow"]
margin_right = 200.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 40 )
custom_fonts/font = SubResource( 8 )
context_menu_enabled = false
wrap_enabled = true

[node name="SendChat" type="Button" parent="MatchInformation/VBoxContainer/ChatRow"]
margin_left = 204.0
margin_right = 269.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 9 )
text = "Send"

[node name="ConcedeRow" type="HBoxContainer" parent="MatchInformation/VBoxContainer"]
margin_top = 511.0
margin_right = 290.0
margin_bottom = 546.0

[node name="concedeButton" type="Button" parent="MatchInformation/VBoxContainer/ConcedeRow"]
margin_right = 153.0
margin_bottom = 35.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 10 )
text = "Concede"

[node name="OpponentLeftScreen" type="CanvasLayer" parent="."]

[node name="opponentLeftScreen" type="PanelContainer" parent="OpponentLeftScreen"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -7.0
margin_top = -7.0
margin_right = 12.0
margin_bottom = 9.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="OpponentLeftScreen/opponentLeftScreen"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1036.0
margin_bottom = 609.0
texture = ExtResource( 3 )
expand = true

[node name="CenterContainer" type="CenterContainer" parent="OpponentLeftScreen/opponentLeftScreen"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1036.0
margin_bottom = 609.0

[node name="VBoxContainer" type="VBoxContainer" parent="OpponentLeftScreen/opponentLeftScreen/CenterContainer"]
margin_left = 381.0
margin_top = 269.0
margin_right = 647.0
margin_bottom = 332.0

[node name="opponentLeftLabel" type="Label" parent="OpponentLeftScreen/opponentLeftScreen/CenterContainer/VBoxContainer"]
margin_right = 266.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 11 )
text = "Opponent Left . . ."

[node name="opponentLeftOkButton" type="Button" parent="OpponentLeftScreen/opponentLeftScreen/CenterContainer/VBoxContainer"]
margin_top = 31.0
margin_right = 266.0
margin_bottom = 63.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 12 )
text = "Ok"
[connection signal="body_entered" from="DeathArea" to="." method="_on_DeathArea_body_entered"]
[connection signal="pressed" from="gameOverScreen/PanelContainer/VBoxContainer/CenterContainer2/HBoxContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="gameOverScreen/PanelContainer/VBoxContainer/CenterContainer2/HBoxContainer/Rematch" to="." method="_on_Rematch_pressed"]
[connection signal="pressed" from="MatchInformation/VBoxContainer/ChatRow/SendChat" to="." method="_on_SendChat_pressed"]
[connection signal="pressed" from="MatchInformation/VBoxContainer/ConcedeRow/concedeButton" to="." method="_on_concedeButton_pressed"]
[connection signal="pressed" from="OpponentLeftScreen/opponentLeftScreen/CenterContainer/VBoxContainer/opponentLeftOkButton" to="." method="_on_opponentLeftOkButton_pressed"]
